--- a/src/main/resources/locale/messages_en.yml
+++ b/src/main/resources/locale/messages_en.yml
@@ -51,5 +51,5 @@ misc:
       &7Click this URL to listen:
         
       &6<connect-url>
-  top-bar: '&8\<&m                             &r&6 Audio Connect &8&m                             &r&8\>'
-  bottom-bar: '&8\<&m                                                                             &r&8\>'
+  top-bar: '&8\<&m-----------------------------&r&6 Audio Connect &8&m-----------------------------&r&8\>'
+  bottom-bar: '&8\<&m------------------------------------------------------------------------------&r&8\>'
