--- a/src/main/resources/locale/messages_de.yml
+++ b/src/main/resources/locale/messages_de.yml
@@ -31,6 +31,11 @@ failed:
   verify-response: '&4Die Verifizierungsanfrage wurde abgelehnt: &cUnerwarteter Grund (<code>)'
   verify-invalid: '&cDie genannte Adresse wurde nicht als die Öffentlichen Adresse für diesen Server verifiziert. Bitte gehe sicher das die Adresse zu diesem Server leitet und öffentlich verfügbar ist.'
   verify-error: '&cEine unerwarteter Fehler ist aufgetreten beim kontaktieren des AudioConnect Server´s.'
+  import-running: '&cEine Importierung ist bereits in Bearbeitung. Nutze "&o&c/ac import stop&r&c" um es zu stoppen.'
+  import-stopped: '&cKeine Imports am laufen.'
+  import-mcjukebox-absent: '&cDas MCJukebox Plugin ist nicht installiert. Es gibt nichts zum importieren.'
+  import-mcjukebox-nothing: '&cDas derzeitig installierte MCJukebox hat keine konfigurierte Region-Audio zum importieren.'
+  import-mcjukebox-error: '&cEin unerwarteter Fehler ist beim lesen der MCJukebox Dateien aufgetreten'
 
 succeeded:
   reloaded: 'AudioConnect Config und Sprachdateien wurden reloaded.'
@@ -43,10 +48,31 @@ misc:
   announcement: 'Erlebe diesen Server auf einem ganz neuen Level mit integrierter Server-Audio! '
   verify-request: 'Verifiziere die Adresse mit deinem Account bei <host> ...'
   verify-check: 'Überprüfe Verifizierungsstatus...'
+  import-started: '&7Startet Import von &6<import-count> &7<name> Region-Audio Audio...'
+  import-progress: '&7<name> Import Fortschritt: <percent>%'
+  import-finished: '&7<name> Import wurde erfolgreich abgeschlossen!'
+  import-finished-errors: '&7<name> Import mit Fehlern abgeschlossen.'
+  import-stopped: '&7<name> Import vorzeitig gestoppt.'
+  import-stopped-errors: '&7<name> Import hat vorzeitig mit Fehlern gestoppt'
+  import-count: 'Importiert: <import-count>/<import-size> Audio-Regionen (<file-count> Audio Files)'
+  import-errors: '&7Fehler: &c<error-count>'
+  import-info: '&6Checke die Konsolen-Logs für die vollen Import Details'
+  import-rename: 'Hinweis: Audio IDs werden generiert und können von deinem Account unter <host> umbenannt werden.'
+  import-audio-list: 'Importierte Audiodateien: \<audio-id\> (\<audio-url\>)'
+  import-region-list: 'Importierte Regionen: \<region-id\> (\<audio-id\>)'
+  import-error-list: 'FEHLER:  \<region-id\> (\<audio-url\>)'
+  import-error-file: 'Ungültige HTTP URL'
+  import-error-file-404: 'Ungültige URL: Datei nicht gefunden.'
+  import-error-file-download: 'Ungültige URL: Dateidownload fehlgeschlagen.'
+  import-error-file-empty: 'Ungültige URL: Datei ist leer.'
+  import-error-file-large: 'Ungültige URL: Datei ist zu groß. (Upgrade zu Premium in Betracht ziehen.)'
+  import-error-file-format: 'Ungültige URL: Datei ist ein ungültiges oder nicht unterstütztes Audioformat.'
+  import-error-capacity: 'Ungültige URL: Datei würde Speicherkapazität überschreiten (Upgrade zu Premium in Betracht ziehen.)'
+  import-error-region: 'Ungültige Region ID: Die Region existiert nicht.'
   register-details: |
       &7Nutze den Link und logge dich auf dem Server mit der Adresse ein. Führe den Command danach erneut aus um deine Besitzerrechte für den Account sicherzustellen.
         
-        &6minecraftaudio.com/account/register
+        &6account.minecraftaudio.com
   connect-details: |
       &7Klicke auf die URL für den Sound:
         
